--- a/_posts/Postgresql/2017-02-14-pg-backup.md
+++ b/_posts/Postgresql/2017-02-14-pg-backup.md
@@ -155,6 +155,7 @@ comments: true
             
             第五步 : 启动服务
             // 过一会数据恢复好以后，可以看到数据目录下的 recovery.conf 后缀名变成了 done
+            // 最后不要忘了恢复后执行一下 vacuum 或 analyze
 
 
 ### 方案三.　基于 pg_rman 的全备和增备( 推荐 ) ###
@@ -344,3 +345,4 @@ comments: true
         
         
         最后再次启动服务，会发现数据不是最新的(确实是"2017-02-20 21:13:51"这份备份截止时的)
+        // 最后不要忘了恢复后执行一下 vacuum 或 analyze
